# manet-simulations

./: .gitignore  .gitmodules  Pipfile
reports/: .gitignore
reports/p10/: master.tex
reports/p10/bib/: mybib.bib
reports/p10/figures/: coordinator.tex
reports/p10/sections/00-Front-Matter/: 00-main.tex  01-frontpage.tex  02-colophon.tex  03-titlepages.tex  04-preface.tex  04-summary.tex  05-preface.tex
reports/p10/sections/01-Preliminaries/: 00-main.tex  01-introduction.tex  02-related-work.tex
reports/p10/sections/02-hardware/: 00-main.tex  02-middleware.tex
reports/p10/sections/02-radiophysics/: 00-main.tex  (+11 more)
reports/p10/setup/: Glossary.tex  glossary.tex  macros.tex  preamble.tex
reports/p9/: master.tex
reports/p9/bib/: mybib.bib
reports/p9/setup/: Glossary.tex  macros.tex  preamble.tex
src/: CMakeLists.txt
src/alohanet/: CMakeLists.txt
src/alohanet/src/: alohanet.cpp
src/controller/: CMakeLists.txt
src/controller/src/: ctrl.cpp  ctrl.h  main.cpp
src/coordinator/: CMakeLists.txt
src/coordinator/logs/: 2nodes_rssi.txt  gridlog_2x2_rssi.txt  gridlog_4x4_rssi.txt  gridlog_8x8_rssi.txt
src/coordinator/logs/random_walk/: random_walk_60n_5m_gps_rssi_3km.txt
src/coordinator/logs/random_walk/scalability/: 1000_gps_rssi.txt  100_gps_rssi.txt  300_gps_rssi.txt  600_gps_rssi.txt
src/coordinator/src/: coordinator.cpp  coordinator.h  gpslog.cpp  gpslog.h  main.cpp
src/coordinator/src/models/: action.cpp  action.h  coordinator.cpp  coordinator.h  gpslog.cpp  gpslog.h  link.cpp  link.h  location.h  node.cpp  node.h  packet.cpp  packet.h  radiomodel.cpp  radiomodel.h  statistics.cpp  statistics.h  topology.cpp  topology.h
src/coordr/: CMakeLists.txt
src/coordr/src/: coordr.cpp  coordr.h  main.cpp
src/ctlr/: CMakeLists.txt
src/ctlr/src/: ctlr.cpp  ctlr.h  ctrl.cpp  ctrl.h  main.cpp
src/ctrlr/: CMakeLists.txt
src/ctrlr/src/: ctrlr.cpp  ctrlr.h  main.cpp
src/libs/: CMakeLists.txt
src/libs/common/: CMakeLists.txt
src/libs/common/include/common/: all.h  equality.h
src/libs/geo/: CMakeLists.txt
src/libs/geo/include/geo/: location.h
src/libs/geo/src/: location.cpp
src/libs/geo/test/: CMakeLists.txt
src/libs/http/: CMakeLists.txt
src/libs/linkaiders/: CMakeLists.txt
src/libs/linkaiders/include/linkaiders/: linkmodel.h
src/libs/linkaiders/src/: gpslog.cpp  gpslog.h  linkmodel.cpp  model.cpp  model.h
src/libs/linkaiders/test/: CMakeLists.txt  gpslog.txt  test.cpp
src/libs/mpilib/: CMakeLists.txt
src/libs/mpilib/include/mpilib/: defines.h  geomath.h  hardware.h  helpers.h  httpclient.h  hwglobals.h  location.h  mpi.h  node.h  ostr.h  queue.h
src/libs/mpilib/src/: geomath.cpp  hardware.cpp  helpers.cpp  httpclient.cpp  hwglobals.cpp  location.cpp  mpi.cpp  ostr.cpp
src/libs/mpilib/test/: CMakeLists.txt  test.cpp
src/libs/reachi/: CMakeLists.txt
src/libs/reachi/benchmark/: cholesky.cpp  clustering.cpp
src/libs/reachi/include/reachi/: cholesky.h  clustering.h  constants.h  datagen.h  linalg.h  link.h  linkmodel.h  math.h  node.h  ostr.h  qr.h  radiomodel.h  svd.h
src/libs/reachi/src/: cholesky.cpp  clustering.cpp  datagen.cpp  linalg.cpp  link.cpp  linkmodel.cpp  math.cpp  node.cpp  ostr.cpp  radiomodel.cpp
src/libs/reachi/test/: CMakeLists.txt  main.cpp  test.cpp
src/libs/reachi2/: CMakeLists.txt
src/libs/reachi2/include/reachi2/: Link.h  datagen.h  linalg.h  link.h  linkmodel.h  math.h  radiomodel.h
src/libs/reachi2/src/: datagen.cpp  linkmodel.cpp  math.cpp  radiomodel.cpp
src/libs/reachi2/test/: CMakeLists.txt  test.cpp
src/libs/sims/: CMakeLists.txt
src/linkmodel/: CMakeLists.txt
src/linkmodel/include/linkmodel/: cholesky.h  constants.h  linkmodel.h  math.h  radiomodel.h
src/linkmodel/src/: linkmodel.cpp  math.cpp  radiomodel.cpp
src/linkmodel/test/: CMakeLists.txt  test.cpp
src/linkmodel_interface/: CMakeLists.txt
src/linkmodel_interface/src/: linkmodel_interface.cpp  linkmodel_interface.h  main.cpp
src/lmac/: CMakeLists.txt
src/lmac/src/: lmac.cpp  main.cpp  models.h  node.cpp  node.h  packet.h
src/lmc/: CMakeLists.txt
src/lmc/src/: lmc.cpp  lmc.h  main.cpp
src/lmheuristics/: CMakeLists.txt
src/lmheuristics/src/: lmh.cpp
src/loggen/src/: main.cpp
src/loggenerator/: CMakeLists.txt
src/loggenerator/src/: main.cpp
src/mpi/: CMakeLists.txt
src/mpi/include/mpi/: hardware.h  helpers.h  link.h  network.h  node.h  queue.h
src/mpi/src/: geomath.cpp  hardware_impl.h  helpers.cpp  httpclient.cpp  link.cpp  location.cpp  mpi.h  network.cpp  node.cpp  packethandler.h
src/mpi/test/: CMakeLists.txt  test.cpp
src/mpilib/: CMakeLists.txt
src/mpilib/include/mpilib/: defines.h  geomath.h  hardware.h  helpers.h  httpclient.h  link.h  location.h  math.h  mpi.h  node.h  objectifier.h  ostr.h  packet.h  unpacker.h
src/mpilib/src/: geomath.cpp  hardware.cpp  helpers.cpp  httpclient.cpp  interface.h  link.cpp  location.cpp  mpi.cpp  node.cpp  ostr.cpp  unpacker.cpp
src/mpilib/test/: CMakeLists.txt  test.cpp
src/reachi/: CMakeLists.txt
src/reachi/benchmark/: CMakeLists.txt  cholesky.cpp  cholesky_benchmark.cpp  clustering.cpp
src/reachi/include/reachi/: cholesky.h  clustering.h  constants.h  datagen.h  linkmap.h  linkmodel.h  math.h  qr.h  radiomodel.h  svd.h
src/reachi/src/: cholesky.cpp  clustering.cpp  datagen.cpp  datagen.h  link.cpp  linkmap.cpp  linkmodel.cpp  math.cpp  node.cpp  radiomodel.cpp
src/reachi/test/: CMakeLists.txt  clustering.cpp  datagen.cpp  test.cpp
src/scratch/: CMakeLists.txt
src/scratch/src/: main.cpp
tools/: pep_calc.py  run
tools/benchmark/: benchmark.py
tools/gps_log_parser/: app.py
tools/gpslogs/: parser.py  phillippines.csv  rude_skov.csv
tools/graphs/: pep.py
tools/linkmodel_visualiser/: app.py  models.py
tools/visualiser/: app.ini  app.py  create_graph.py  post_node_data.http
tools/visualiser/backend/: engine.py  smc2py.py
tools/visualiser/graphs/: 404.html
tools/visualiser/scratch/: visualiser.py
tools/visualiser/static/: logic.js  rainbowvis.js  style.css
tools/visualiser/templates/: animated.html  maps.html
(+80 files in other folders)
