#set(JSON_BuildTests OFF CACHE BOOL "Don't build json test")
#set(BUILD_CPR_TESTS OFF CACHE BOOL "Don't build cpr tests")
set(CATCH_BUILD_TESTING OFF CACHE BOOL "Don't build Catch2 test")

#find_package(CURL)
#if(CURL_FOUND)
#    set(USE_SYSTEM_CURL ON CACHE BOOL "Use the system curl for faster builds")
#    set(CURL_CA_PATH_SET NONE)
#endif()

#find_package(OpenSSL)
#if(OPENSSL_FOUND)
#    set(CMAKE_USE_OPENSSL ON CACHE BOOL "Use OPENSSL for cpr")
#else()
#    set(CMAKE_USE_OPENSSL OFF CACHE BOOL "OPENSSL not found")
#endif()

#add_subdirectory(json)
#add_subdirectory(cpr)

add_subdirectory(Catch2)
add_subdirectory(spdlog)
add_subdirectory(mpilib)
add_subdirectory(reachi)
add_subdirectory(eigen)